--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,8 +36,7 @@ header {
 	position: relative;
 }
 
-.trigger {
-	line-height: 50px;
+.trigger, .tweet {
 	width: 250px;
 	height: 50px;
 	background-color: #3498db;
@@ -46,28 +45,16 @@ header {
 	color: #ecf0f1;
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
-	font-style: bold;
 	text-transform: uppercase;
 	cursor: pointer;
 	transition: 0.3s;
 }
 
 .tweet {
-	display: inline-block;
+	display: block;
 	line-height: 50px;
-	margin-left: 20px;
-	width: 50px;
-	height: 50px;
+	margin-top: 20px;
 	text-align: center;
-	background-color: #3498db;
-	border: 3px solid #ecf0f1;
-	border-radius: 50%;
-	color: #ecf0f1;
-	font-family: 'Lato', sans-serif;
-	font-size: 1.8rem;
-	text-transform: uppercase;
-	cursor: pointer;;
-	transition: 0.3s;
 }
 
 .trigger:hover, .tweet:hover {
