--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 * {
-		box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
